Revisando a última versión en Inglés.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@295075 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/context.xml
+++ b/language/context.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288876 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: lboshell Status: ready -->
+<!-- $Revision: 288721 $ -->
+<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
 
 <reference xml:id="context" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>Opciones de contexto y parámetros</title>
