--- a/language/basic-syntax.xml
+++ b/language/basic-syntax.xml
@@ -2,11 +2,10 @@
 <!-- $Revision: 288721 $ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
  <chapter xml:id="language.basic-syntax" xmlns="http://docbook.org/ns/docbook">
-  <title>Basic syntax</title>
+  <title>Sintaxis básica</title>
   <sect1 xml:id="language.basic-syntax.phpmode">
    <title>Saliendo de HTML</title>
    <para>
-
     Cuando PHP interpreta un fichero, buscar por las etiquetas de 
     apertura y cerrado, que dicen a PHP donde empezar y finalizar la
     interpretación del código. Este mecanismo permite a PHP ser 
