Revisando a última versión en Inglés.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@295916 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/operators.xml
+++ b/language/operators.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 293508 $ -->
-<!-- EN-Revision: 086f6b6ece154ca47070f0e3b48357f902ddaf3d Maintainer: yago Status: ready -->
+<!-- $Revision: 295889 $ -->
+<!-- EN-Revision: 7b77d861a6952bdcd6dd4dc572ef1af43066b8bd Maintainer: yago Status: ready -->
  <chapter xml:id="language.operators" xmlns="http://docbook.org/ns/docbook">
   <title>Operadores</title>
   <simpara>
@@ -702,6 +702,19 @@ function comparacion_matrices_estandar($op1, $op2)
     linkend="language.operators.array">Operadores de matriz</link>, y la
     sección del manual sobre <link linkend="language.types">Tipos</link>.
    </para>
+
+   <warning>
+    <title>Comparación de números con coma flotante</title>
+
+    <para>
+     Debido a la forma en que los <type>float</type>s son representados internamente, no se
+     debería comprobar la igualdad de dos <type>float</type>s.
+    </para>
+
+    <para>
+     Ver la documentación de <type>float</type>  para más información.
+    </para>
+   </warning>
 
    <sect2 xml:id="language.operators.comparison.ternary">
     <title>Operador Ternario</title>
