Actualizando fichero a su última revisión en Inglés.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@296089 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/context/socket.xml
+++ b/language/context/socket.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- $Revision: 296080 $ -->
+<!-- EN-Revision: 0cc3ec82158dbc3a74069483994f99dd640b9350 Maintainer: yago Status: ready -->
 
 <refentry xml:id="context.socket" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -39,6 +39,20 @@
       </note>
      </listitem>
     </varlistentry>
+    <varlistentry xml:id="context.socket.backlog">
+     <term><parameter>backlog</parameter></term>
+     <listitem>
+      <para>
+       Usado para limitar el número de conexiones pendientes en la cola 
+       de escucha del socket.
+      </para>
+      <note>
+       <para>
+        Solamente se aplica a <function>stream_socket_server</function>.
+       </para>
+      </note>
+     </listitem>
+    </varlistentry>
    </variablelist>
   </para>
  </refsect1><!-- }}} -->
@@ -59,6 +73,12 @@
        <entry>5.1.0</entry>
        <entry>
         Se agregó <literal>bindto</literal>.
+       </entry>
+      </row>
+      <row>
+       <entry>5.3.3</entry>
+       <entry>
+        Se agregó <literal>backlog</literal>.
        </entry>
       </row>
      </tbody>
