--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 291201 $ -->
-<!-- EN-Revision: 1528e92fd17524db340046cc215011837b4b8c5c Maintainer: yago Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: a4ed29489b2964707e3b74c911af6610c05ee0e4 Maintainer: yago Status: ready -->
 
  <chapter xml:id="language.variables" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>Variables</title>
@@ -394,7 +394,7 @@ echo $b;
    nombre de la variable global como clave y los contenidos de dicha
    variable como el valor del elemento del array.
    <varname>$GLOBALS</varname> existe en cualquier ámbito, esto ocurre ya
-   que $GLOBALS es una <link
+   que <varname>$GLOBALS</varname> es una <link
    linkend="language.variables.superglobals">superglobal</link>. Aquí hay un
    ejemplo que demuestra el poder de las superglobales:
   </simpara>
@@ -490,7 +490,7 @@ function test()
     puede ocurrir que se llame a sí misma indefinidamente. Hay que
     asegurarse de implementar una forma adecuada de terminar la recursión.
     La siguiente función cuenta recursivamente hasta 10, usando la variable
-    estática <varname>$conteo</varname> para saber cuándo parar:
+    estática <varname>$count</varname> para saber cuándo parar:
    </simpara>
    <para>
     <example>
@@ -500,14 +500,14 @@ function test()
 <?php
 function test()
 {
-    static $conteo = 0;
+    static $count = 0;
 
-    $conteo++;
-    echo $conteo;
-    if ($conteo < 10) {
+    $count++;
+    echo $count;
+    if ($count < 10) {
         test();
     }
-    $conteo--;
+    $count--;
 }
 ?>
 ]]>
@@ -585,9 +585,7 @@ var_dump($obj);
    </programlisting>
   </informalexample>
 
-  <simpara>
-   Al ejecutar este ejemplo obtendremos la siguiente salida:
-  </simpara>
+ &example.outputs;
 
   <screen>
 NULL
@@ -639,9 +637,7 @@ $aun_obj2 = obtener_instancia_no_ref();
 ]]>
     </programlisting>
    </informalexample>
-   <simpara>
-    Al ejecutar este ejemplo obtendremos la siguiente salida:
-   </simpara>
+   &example.outputs;
    <screen>
 Objeto estático: NULL
 Objeto estático: NULL
@@ -737,7 +733,7 @@ echo "$a $hola";
     una variable, o si se pretendía utilizar <varname>$$a</varname> como
     variable y el índice [1] como índice de dicha variable. La sintaxis para
     resolver esta ambigüedad es: <varname>${$a[1]}</varname> para el primer
-    caso y ${$a}[1] para el segundo.
+    caso y <varname>${$a}[1]</varname> para el segundo.
    </simpara>
 
    <simpara>
@@ -835,10 +831,9 @@ I am bar.
    import_request_variables('p', 'p_');
    echo $p_username;
 
-// Ya no está disponible desde PHP 6. A partir de PHP 5.0.0, estas variables
-// predefinidas largas pueden ser deshabilitadas con la directiva
-// register_long_arrays.
-
+// Desde PHP 5.0.0, las variables predefinidas largas se pueden
+// desactivar con la directiva register_long_arrays. Desde
+// PHP 6, no están completamente no disponibles.
    echo $HTTP_POST_VARS['username'];
 
 // Disponible si la directiva de PHP register_globals = on. A partir de
@@ -950,7 +945,7 @@ if ($_POST) {
      <simpara>
      Cuando el usuario hace click en cualquier parte de la imagen, el
      formulario que la acompaña se transmitirá al servidor con dos variables
-     adicionales, sub_x y sub_y. Éstas contienen las coordenadas del clic
+      adicionales, <varname>sub_x</varname> y <varname>sub_y</varname>. Éstas contienen las coordenadas del clic
      del usuario dentro de la imagen.  Los más experimentados puede notar
      que los nombres de variable enviados por el navegador contienen un
      guión en vez de un subrayado (guión bajo), pero PHP convierte el guión
@@ -996,7 +991,7 @@ if ($_POST) {
    </informalexample>
 
    <simpara>
-    Esto creará dos cookies separadas aunque MiCookie será un array simple
+    Esto creará dos cookies separadas aunque <varname>MyCookie</varname> será un array simple
     en el script. Si se quiere definir una sola cookie con valores
     múltiples, considere el uso de la función <function>serialize</function>
     o <function>explode</function> primero en el valor.
@@ -1039,11 +1034,11 @@ setcookie("Carrito[$conteo]", $item, time()+3600);
      <programlisting role="php">
 <![CDATA[
 <?php
-$nombrevar.ext;  /* nombre de variable inválido */
+$varname.ext;  /* nombre de variable inválido */
 ?>
 ]]>
     </programlisting>
-    Lo que el intérprete vé es el nombre de una variable $nombrevar, seguido
+    Lo que el intérprete vé es el nombre de una variable <varname>$varname</varname>, seguido
     por el operador de concatenación, y seguido por la cadena pura (es
     decir, una cadena sin entrecomillar que no coincide con ninguna palabra
     clave o reservada conocida) 'ext'. Obviamente, no se pretendía que fuese
