--- a/language/constants.xml
+++ b/language/constants.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: 7df1c871ff246378060dfacccf25331b9c9b6546 Maintainer: yago Status: ready -->
  <chapter xml:id="language.constants" xmlns="http://docbook.org/ns/docbook">
   <title>Constantes</title>
 
@@ -46,7 +46,7 @@ define("__FOO__", "something");
   </para>
   <note>
    <simpara>
-    Para nuestros propósitos , entenderemos como letra los carácteres
+    Para nuestros propósitos, entenderemos como letra los carácteres
     a-z, A-Z, y los ASCII del 127 hasta el 255 (0x7f-0xff).
    </simpara>
   </note>
@@ -166,6 +166,16 @@ echo CONSTANT;
     </example>
    </para>
 
+   <note>
+    <para>
+     A diferencia de definir constantes usando <function>define</function>,
+     las constantes definidas con la palabra clave <literal>const</literal>
+     deben declararse en el nivel superior del entorno de la aplicación
+     porque se definen en tiempo de ejecución. Esto significa que no pueden
+     declararse dentro de funciones, loops o declaraciones <literal>if</literal>.
+    </para>
+   </note>
+   
    <simpara>
     Vea también <link linkend="language.oop5.constants">Constantes de clase</link>.
    </simpara>
