--- a/language/basic-syntax.xml
+++ b/language/basic-syntax.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
+<!-- $Revision$ -->
 <!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: yago Status: ready -->
  <chapter xml:id="language.basic-syntax" xmlns="http://docbook.org/ns/docbook">
   <title>Sintaxis básica</title>
@@ -7,7 +7,7 @@
    <title>Saliendo de HTML</title>
    <para>
     Cuando PHP interpreta un fichero, buscar por las etiquetas de 
-    apertura y cerrado, que dicen a PHP donde empezar y finalizar la
+    apertura y fin de bloque, que dicen a PHP donde empezar y finalizar la
     interpretación del código. Este mecanismo permite a PHP ser 
     incrustado en todo tipo de documentos, todo lo que esté fuera
     de las etiquetas de PHP será ignorado por el interpretador.
@@ -54,7 +54,7 @@ if ($expression) {
     <function>print</function>.
    </para>
    <para>
-    Existen cuatro tipos de pares de etiquetas de apertura y cerrado
+    Existen cuatro tipos de pares de etiquetas de apertura y de fin de bloque
     que se pueden usar en PHP. Dos de estas, &lt;?php ?&gt; y
     &lt;script language="php"&gt; &lt;/script&gt;, siempre están disponibles.
     Las otras dos son etiquetas cortas y etiquetas estilo <productname>ASP</productname>
@@ -72,7 +72,7 @@ if ($expression) {
    </para>
    <para>
     <example>
-     <title>Etiquetas de apertura y cerrado de PHP</title>
+     <title>Etiquetas de apertura y de fin de bloque de PHP</title>
      <programlisting role="php">
 <![CDATA[
 1.  <?php echo 'si se quiere mostrar documentos XHTML o XML, debe hacerse así'; ?>
@@ -125,9 +125,9 @@ if ($expression) {
    <para>
     Como en C o Perl, PHP requiere que las instruciones terminen
     en punto y coma al final de cada declaración. La etiqueta de
-    cerrado de un bloque de PHP automáticamente implica un punto
+    fin de bloque de PHP automáticamente implica un punto
     y coma. No se tiene que usar punto y comoa para cerrar la última
-    línea de código de PHP. La etiqueta de cerrado para el bloque
+    línea de código de PHP. La etiqueta de fin de bloque
     incluirá de inmediato salto de línea si no está presente. 
     <informalexample>
      <programlisting role="php">
@@ -144,12 +144,12 @@ if ($expression) {
     </informalexample>
     <note>
      <para>
-      La etiqueta de cerrado de PHP al final del fichero es opcional,
-      y en según que casos omitirla es útil cuando se usa <function>include</function>
-      o <function>require</function> o para evitar espacios en blanco no deseados
-      al final de ficheros y poder añadir encabezados de respuesta en otro momento. También
-      es muy útil si se utiliza búfer de salida y no quieres ver espacios de blanco no
-      deseados al final de los ficheros que se están incluyendo en el script.
+      Note: La etiqueta de fin de bloque es opcional al final del archivo 
+      y es útil omitirlo cuando se utilizan sentencias <function>include</function> 
+      o <function>require</function>, para que no se produzcan espacios en blanco 
+      al final de los archivos cuando se quieren mandar cabeceras de http. También 
+      sirve cuando se captura la salida con output buffering y no se desean 
+      espacios innecesarios al final de partes generadas por archivos incluídos.    
      </para>
     </note>
    </para>
