--- a/language/types/array.xml
+++ b/language/types/array.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
+<!-- $Revision$ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
 <sect1 xml:id="language.types.array">
  <title>Arrays</title>
@@ -11,7 +11,7 @@
   diferentes; puede ser usado como una matriz real, una lista (vector),
   tabla asociativa (caso particular de implementación de un mapa),
   diccionario, colección, pila, cola y probablemente más. Ya que los valores
-  de un <type>array</type> pueden ser otros <type>array</type>s, también es 
+  de un <type>array</type> pueden ser otros <type>array</type>s, también es
   posible crear árboles y <type>array</type>s multidimensionales.
  </para>
 
@@ -64,7 +64,7 @@ echo $arr[12];    // 1
     mientras que <literal>"08"</literal> será interpretado como
     <literal>"08"</literal>). Los valores <type>float</type> en
     <varname>key</varname> serán truncados a valores tipo
-    <type>integer</type>. Los tipos de <type>arrays</type> indexados y asociativos 
+    <type>integer</type>. Los tipos de <type>arrays</type> indexados y asociativos
     son el mismo tipo en PHP, el cual pueden contener índices tipo <type>integer</type>
     o <type>string</type>.
    </para>
@@ -98,7 +98,7 @@ echo $arr["somearray"]["a"];  // 42
 
    <para>
     Si no especifica una key para un valor dado, entonces es usado el
-    máximo de los índices enteros, y la nueva key será ese valor máximo
+    máximo de los índices <type>integer</type>, y la nueva key será ese valor máximo
     más 1. Si se especifica una key que ya tiene un valor asignado, ése
     valor será sobrescrito.
    </para>
@@ -166,7 +166,7 @@ $arr[] = <replaceable>value</replaceable>;
    
    <para>
     Si <varname>$arr</varname> no existe aun, será creada, así que ésta
-    es también una forma alternativa de crear un array.  Para modificar un
+    es también una forma alternativa de crear un <type>array</type>.  Para modificar un
     cierto valor, simplemente asigne un nuevo valor a un elemento usando su
     key. Para remover una pareja key/valor, use la función
     <function>unset</function> sobre ella.
@@ -188,23 +188,22 @@ unset($arr[5]); // Esto elimina el elemento del array
 
 unset($arr);    // Esto elimina el array completamente
 ?>
-]]> 
+]]>
     </programlisting>
    </informalexample>
 
    <note>
     <para>
      Como se menciona anteriormente, si no se especifica una key, entonces
-     se toma el máximo de los índices enteros existentes, y la nueva key
-     será ese valor máximo más 1. Si no existen índices enteros aun, la
-     clave será <literal>0</literal> (cero). Si se especifica una clave que
-     ya tenía un valor asignado, el valor será reemplazado.
+     se toma el máximo de los índices <type>integer</type> existentes, y la nueva key
+     será ese valor máximo más 1. Si no existen índices <type>integer</type> aun, la
+     clave será <literal>0</literal> (cero).
     </para>
 
     <para>
      Note que el entero máximo usado en la key para este caso <emphasis>no
-     necesita existir actualmente en el <type>array</type></emphasis>. 
-     Tan solo debe haber existido en el array en algún punto desde que 
+     necesita existir actualmente en el <type>array</type></emphasis>.
+     Tan solo debe haber existido en el <type>array</type> en algún punto desde que
      el <type>array</type> haya sido re-indexado. El siguiente ejemplo ilustra este caso:
     </para>
 
@@ -231,7 +230,7 @@ $array = array_values($array);
 $array[] = 7;
 print_r($array);
 ?>
-]]> 
+]]>
      </programlisting>
      &example.outputs;
      <screen>
@@ -270,8 +269,7 @@ Array
 
   <para>
    Existe un buen número de funciones útiles para trabajar con array.
-   Consulte la sección <link linkend="ref.array">funciones de
-   arrays</link>.
+   Consulte la sección <link linkend="ref.array">funciones de arrays</link>.
   </para>
 
   <note>
@@ -279,7 +277,7 @@ Array
     La función <function>unset</function> le permite eliminar keys de un
     array. Tenga en cuenta que el array <emphasis>no</emphasis> es
     re-indexado. Si desea el comportamiento real de "eliminar y desplazar",
-    el array puede ser re-indexado usando la función
+    el <type>array</type> puede ser re-indexado usando la función
     <function>array_values</function>.
    </para>
    
@@ -291,7 +289,7 @@ $a = array(1 => 'one', 2 => 'two', 3 => 'three');
 unset($a[2]);
 /* producirá un array que hubiera sido definida como
    $a = array(1 => 'one', 3 => 'three');
-   and NOT
+   y NO
    $a = array(1 => 'one', 2 =>'three');
 */
 
@@ -301,11 +299,12 @@ $b = array_values($a);
 ]]>
     </programlisting>
    </informalexample>
-  </note> 
+  </note>
 
   <para>
-   La estructura de control &foreach; existe específicamente para <type>array</type>s. 
-   Ésta provee una manera fácil de recorrer un <type>array</type>.
+   La estructura de control &foreach; 
+   existe específicamente para <type>array</type>s. Ésta provee una manera fácil 
+   de recorrer un <type>array</type>.
   </para>
  </sect2>
  
@@ -340,8 +339,8 @@ echo $foo[bar];
     ('bar' - note las comillas). Puede que en el futuro PHP defina
     constantes que, desafortunadamente para tal tipo de código, tengan el
     mismo nombre. Funciona porque PHP automáticamente convierte una
-    <emphasis>cadena pura</emphasis> (una cadena sin comillas que no
-    corresponda con símbolo conocido alguno) en una cadena que contiene la
+    <emphasis>cadena pura</emphasis> (un <type>string</type> sin comillas que no
+    corresponda con símbolo conocido alguno) en un <type>string</type> que contiene la
     cadena pura. Por ejemplo, si no se ha definido una constante llamada
     <constant>bar</constant>, entonces PHP reemplazará su valor por la
     cadena <literal>'bar'</literal> y usará ésta última.
@@ -350,9 +349,8 @@ echo $foo[bar];
    <note>
     <simpara>
      Esto no quiere decir que <emphasis>siempre</emphasis> haya que usar
-     comillas en la clave. No use comillas con claves que sean <link
-     linkend="language.constants">constantes</link> o <link
-     linkend="language.variables">variables</link>, ya que en tal caso PHP
+     comillas en la clave. No use comillas con claves que sean <link linkend="language.constants">constantes</link> o 
+     <link linkend="language.variables">variables</link>, ya que en tal caso PHP
      no podrá interpretar sus valores.
     </simpara>
 
@@ -380,20 +378,20 @@ for ($i = 0; $i < $count; $i++) {
     &example.outputs;
     <screen>
 <![CDATA[
-Revisando 0: 
+Revisando 0:
 Notice: Undefined index:  $i in /path/to/script.html on line 9
-Mal: 
+Mal:
 Bien: 1
 Notice: Undefined index:  $i in /path/to/script.html on line 11
-Mal: 
+Mal:
 Bien: 1
 
-Revisando 1: 
+Revisando 1:
 Notice: Undefined index:  $i in /path/to/script.html on line 9
-Mal: 
+Mal:
 Bien: 2
 Notice: Undefined index:  $i in /path/to/script.html on line 11
-Mal: 
+Mal:
 Bien: 2
 ]]>        
     </screen>
@@ -418,7 +416,7 @@ print $arr['veggie']; // carrot
 
 // Incorrecto. Esto funciona pero también genera un error de PHP de
 // nivel E_NOTICE ya que no hay definida una constante llamada fruit
-// 
+//
 // Notice: Use of undefined constant fruit - assumed 'fruit' in...
 print $arr[fruit];    // apple
 
@@ -430,9 +428,8 @@ define('fruit', 'veggie');
 print $arr['fruit'];  // apple
 print $arr[fruit];    // carrot
 
-// Lo siguiente está bien ya que se encuentra al interior de una
-// cadena. Las constantes no son procesadas al interior de
-// cadenas, así que no se produce un error E_NOTICE aquí
+// Lo siguiente está bien ya que se encuentra al interior de una cadena. Las constantes no son procesadas al 
+// interior de cadenas, así que no se produce un error E_NOTICE aquí
 print "Hello $arr[fruit]";      // Hello apple
 
 // Con una excepción, los corchetes que rodean las matrices al
@@ -454,19 +451,16 @@ print "Hello " . $arr['fruit']; // Hello apple
    </informalexample>
 
    <para>
-    Cuando se habilita <function>error_reporting</function> para mostrar
+    Cuando se habilita <link linkend="ini.error-reporting">error_reporting</link> para mostrar
     errores de nivel <constant>E_NOTICE</constant> (como por ejemplo
     definiendo el valor <constant>E_ALL</constant>), este tipo de usos serán
-    inmediatamente visibles. Por omisión, <link
-    linkend="ini.error-reporting">error_reporting</link> se encuentra
+    inmediatamente visibles. Por omisión, <link linkend="ini.error-reporting">error_reporting</link> se encuentra
     configurado para no mostrarlos.
    </para>
 
    <para>
-    Tal y como se indica en la sección de <link
-    linkend="language.types.array.syntax">sintaxis</link>, lo que existe
-    entre los corchetes cuadrados ('<literal>[</literal>' y
-    '<literal>]</literal>') debe ser una expresión. Esto quiere decir que
+    Tal y como se indica en la sección de <link linkend="language.types.array.syntax">sintaxis</link>, lo que existe
+    entre los corchetes cuadrados ('<literal>[</literal>' y '<literal>]</literal>') debe ser una expresión. Esto quiere decir que
     código como el siguiente funciona:
    </para>
 
@@ -481,8 +475,8 @@ echo $arr[somefunc($bar)];
    </informalexample>
    
    <para>
-    Este es un ejemplo del uso de un valor devuelto por una función como
-    índice del array. PHP también conoce las constantes:
+    Este es un ejemplo del uso de un valor devuelto por una función como índice del array. PHP 
+    también conoce las constantes:
    </para>
 
    <informalexample>
@@ -527,8 +521,7 @@ $error_descriptions[8] = "Esta es una noticia informal";
      otra constante o palabra clave, o una constante proveniente de otro
      código puede interferir.  Por ejemplo, en este momento no puede usar
      las palabras <literal>empty</literal> y <literal>default</literal> de
-     esta forma, ya que son <link linkend="reserved">palabras clave
-     reservadas</link>.
+     esta forma, ya que son <link linkend="reserved">palabras clave reservadas</link>.
     </para>
 
     <note>
@@ -537,8 +530,8 @@ $error_descriptions[8] = "Esta es una noticia informal";
       dobles, es válido no rodear los índices de matriz con comillas, así
       que <literal>"$foo[bar]"</literal> es válido. Consulte los ejemplos
       anteriores para más detalles sobre el porqué, así como la sección
-      sobre <link linkend="language.types.string.parsing">procesamiento de
-      variables en cadenas</link>.
+      sobre <link linkend="language.types.string.parsing">procesamiento de variables
+      en cadenas</link>.
      </simpara>
     </note>
 
@@ -560,7 +553,7 @@ $error_descriptions[8] = "Esta es una noticia informal";
   
   <para>
    Si convierte un <type>object</type> a un <type>array</type>, el resultado
-   es un array cuyos elementos son las propiedados del <type>object</type>. Las keys
+   es un <type>array</type> cuyos elementos son las propiedados del <type>object</type>. Las keys
    son los nombres de las variables miembro, con algunas excepciones
    notables: las variables privadas tienen el nombre de la clase al comienzo
    del nombre de la variable; las variables protegidas tienen un caracter
@@ -595,7 +588,8 @@ var_dump((array) new B());
   </para>
   
   <para>
-   Si convierte un valor &null; a <type>array</type>, obtiene un <type>array</type> vacío.
+   Si convierte un valor &null; a <type>array</type>, obtiene un 
+   <type>array</type> vacío.
   </para>
  </sect2>
 
@@ -603,8 +597,8 @@ var_dump((array) new B());
   <title>Comparación</title>
 
   <para>
-   Es posible comparar matrices con la función <function>array_diff</function> y mediante <link
-   linkend="language.operators.array">operadores de arrays</link>.
+   Es posible comparar arrays con la función <function>array_diff</function> y mediante 
+   <link linkend="language.operators.array">operadores de arrays</link>.
   </para>
  </sect2>
 
@@ -619,7 +613,7 @@ var_dump((array) new B());
    <programlisting role="php">
 <![CDATA[
 <?php
-// This:
+// Esto:
 $a = array( 'color' => 'red',
             'taste' => 'sweet',
             'shape' => 'round',
@@ -643,7 +637,7 @@ $b[] = 'b';
 $b[] = 'c';
 
 // Después de que se ejecute el código, $a será el array
-// array('color' => 'red', 'taste' => 'sweet', 'shape' => 'round', 
+// array('color' => 'red', 'taste' => 'sweet', 'shape' => 'round',
 // 'name' => 'apple', 0 => 4), y $b será el array
 // array(0 => 'a', 1 => 'b', 2 => 'c'), o simplemente array('a', 'b', 'c').
 ?>
@@ -674,15 +668,15 @@ $array = array( 7,
 
 $switching = array(         10, // key = 0
                     5    =>  6,
-                    3    =>  7, 
+                    3    =>  7,
                     'a'  =>  4,
                             11, // key = 6 (el índice entero máximo era 5)
-                    '8'  =>  2, // key = 8 (¡entero!)
+                    '8'  =>  2, // key = 8 (integer!)
                     '02' => 77, // key = '02'
                     0    => 12  // el valor 10 será reemplazado por 12
                   );
                   
-// array vacía
+// array vacío
 $empty = array();         
 ?>
 ]]>
@@ -721,8 +715,7 @@ foreach ($colors as $color) {
   
   <para>
    Modificar los valores del <type>array</type> directamente es posible a partir de
-   PHP 5, pasándolos por referencia. Las versiones anteriores necesitan una
-   solución alternativa:
+   PHP 5, pasándolos por referencia. Las versiones anteriores necesitan una solución alternativa:
   </para>
 
   <example xml:id="language.types.array.examples.changeloop">
@@ -769,7 +762,7 @@ Array
    <programlisting role="php">
 <![CDATA[
 <?php
-$firstquarter  = array(1 => 'January', 'February', 'March');
+$firstquarter  = array(1 => 'Enero', 'Febrero', 'Marzo');
 print_r($firstquarter);
 ?>
 ]]>
@@ -777,11 +770,11 @@ print_r($firstquarter);
    &example.outputs;
    <screen>
 <![CDATA[
-Array 
+Array
 (
-    [1] => 'January'
-    [2] => 'February'
-    [3] => 'March'
+    [1] => 'Enero'
+    [2] => 'Febrero'
+    [3] => 'Marzo'
 )
 ]]>   
    </screen>
@@ -797,7 +790,7 @@ $handle = opendir('.');
 while (false !== ($file = readdir($handle))) {
     $files[] = $file;
 }
-closedir($handle); 
+closedir($handle);
 ?>
 ]]>
    </programlisting>
@@ -805,9 +798,8 @@ closedir($handle);
 
   <para>
    <type>Array</type>s son ordenadas. El orden puede ser modificado usando varias
-   funciones de ordenado. Vea la sección sobre <link
-   linkend="ref.array">funciones de arrays</link> para más información.
-   La función <function>count</function> puede ser usada para contar el
+   funciones de ordenado. Vea la sección sobre <link linkend="ref.array">funciones de arrays</link> 
+   para más información. La función <function>count</function> puede ser usada para contar el
    número de elementos en un <type>array</type>.
   </para>
 
@@ -825,12 +817,12 @@ print_r($files);
 
   <para>
    Dado que el valor de un <type>array</type> puede ser cualquier cosa, también puede
-   ser otro <type>array</type>. De esta forma es posible crear <type>array</type>s 
+   ser otro <type>array</type>. De esta forma es posible crear <type>array</type>s
    recursivas y multi-dimensionales.
   </para>
 
   <example>
-   <title>Arrays recursivas y multi-dimensionales</title>
+   <title>Arrays recursivos y multi-dimensionales</title>
    <programlisting role="php">
 <![CDATA[
 <?php
@@ -852,12 +844,12 @@ $fruits = array ( "fruits"  => array ( "a" => "orange",
                 );
 
 // Algunos ejemplos que hacen referencia a los valores del array anterior
-echo $fruits["holes"][5];    // muestra "second"
-echo $fruits["fruits"]["a"]; // muestra "orange"
-unset($fruits["holes"][0]);  // elimina "first"
+echo $fruits["holes"][5];    // prints "second"
+echo $fruits["fruits"]["a"]; // prints "orange"
+unset($fruits["holes"][0]);  // remove "first"
 
 // Crear una nueva array multi-dimensional
-$juices["apple"]["green"] = "good"; 
+$juices["apple"]["green"] = "good";
 ?>
 ]]>
    </programlisting>
@@ -865,7 +857,7 @@ $juices["apple"]["green"] = "good";
 
   <para>
    La asignación de <type>array</type>s siempre involucra la copia de valores. Use el
-   <link linkend="language.operators">operador de referencia</link> para copiar 
+   <link linkend="language.operators">operador de referencia</link> para copiar
    un <type>array</type> por referencia.
   </para>
 
@@ -877,7 +869,7 @@ $arr1 = array(2, 3);
 $arr2 = $arr1;
 $arr2[] = 4; // $arr2 ha cambiado,
              // $arr1 sigue siendo array(2, 3)
-             
+            
 $arr3 = &$arr1;
 $arr3[] = 4; // ahora $arr1 y $arr3 son iguales
 ?>
@@ -908,3 +900,5 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
+
+
