Updating files to the most recent Version. Fixing several issues.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@297623 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/variables.xml
+++ b/language/variables.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: a4ed29489b2964707e3b74c911af6610c05ee0e4 Maintainer: yago Status: ready -->
+<!-- EN-Revision: 3e57d6ccfdd9e474227c60e0773a3c7d1ecb9536 Maintainer: yago Status: ready -->
 
  <chapter xml:id="language.variables" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title>Variables</title>
@@ -832,8 +832,7 @@ I am bar.
    echo $p_username;
 
 // Desde PHP 5.0.0, las variables predefinidas largas se pueden
-// desactivar con la directiva register_long_arrays. Desde
-// PHP 6, no están completamente no disponibles.
+// desactivar con la directiva register_long_arrays.
    echo $HTTP_POST_VARS['username'];
 
 // Disponible si la directiva de PHP register_globals = on. A partir de
