Updating files to the most recent  version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@299024 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/exception/construct.xml
+++ b/language/predefined/exception/construct.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: 2b587ab01f833234c6520e5f46e6a87919d23135 Maintainer: yago Status: ready -->
 <refentry xml:id="exception.construct" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <refnamediv>
   <refname>Exception::__construct</refname>
@@ -13,7 +13,7 @@
    <modifier>public</modifier> <methodname>Exception::__construct</methodname>
    <methodparam choice="opt"><type>string</type><parameter>message</parameter><initializer>""</initializer></methodparam>
    <methodparam choice="opt"><type>int</type><parameter>code</parameter><initializer>0</initializer></methodparam>
-   <methodparam choice="opt"><type>Exception</type><parameter>previous</parameter><initializer>NULL</initializer></methodparam>
+   <methodparam choice="opt"><type>Exception</type><parameter>previous</parameter><initializer>&null;</initializer></methodparam>
   </constructorsynopsis>
   <para>
    Construye la Excepción.
