--- a/language/oop5.xml
+++ b/language/oop5.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: 96c9d88bad9a7d7d44bfb7f26c226df7ee9ddf26 Maintainer: jorgeolaya Status: ready --> 
+<!-- EN-Revision: 6c9fa8b66584124acf86be723f17aa28bfdb35ba Maintainer: jorgeolaya Status: ready --> 
 <chapter xml:id="language.oop5" xmlns="http://docbook.org/ns/docbook">
  <title>Clases y Objetos</title>
  <sect1  xml:id="oop5.intro">
@@ -28,28 +28,29 @@
   &tip.userlandnaming;
  </sect1>
  
- &language.oop5.basic;
- &language.oop5.properties;
- &language.oop5.constants;
- &language.oop5.autoload;
- &language.oop5.decon;
- &language.oop5.visibility;
- &language.oop5.inheritance;
- &language.oop5.paamayim-nekudotayim;
- &language.oop5.static;
- &language.oop5.abstract;
- &language.oop5.interfaces;
- &language.oop5.overloading;
- &language.oop5.iterations;
- &language.oop5.patterns;
- &language.oop5.magic;
- &language.oop5.final;
- &language.oop5.cloning;
- &language.oop5.object-comparison;
- &language.oop5.typehinting;
- &language.oop5.late-static-bindings;
- &language.oop5.references;
- &language.oop5.serialization;
+  &language.oop5.basic;
+  &language.oop5.properties;
+  &language.oop5.constants;
+  &language.oop5.autoload;
+  &language.oop5.decon;
+  &language.oop5.visibility;
+  &language.oop5.inheritance;
+  &language.oop5.paamayim-nekudotayim;
+  &language.oop5.static;
+  &language.oop5.abstract;
+  &language.oop5.interfaces;
+  &language.oop5.overloading;
+  &language.oop5.iterations;
+  &language.oop5.patterns;
+  &language.oop5.magic;
+  &language.oop5.final;
+  &language.oop5.cloning;
+  &language.oop5.object-comparison;
+  &language.oop5.typehinting;
+  &language.oop5.late-static-bindings;
+  &language.oop5.references;
+  &language.oop5.serialization;
+  &language.oop5.changelog;
 </chapter>
 
 <!-- Keep this comment at the end of the file
