--- a/language/predefined/exception.xml
+++ b/language/predefined/exception.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
 <!-- EN-Revision: 4724b47c25b48f509355d27291aa6893ad0b40c0 Maintainer: jorgeolaya Status: ready -->
+
 <phpdoc:exceptionref xml:id="class.exception"
  xmlns="http://docbook.org/ns/docbook"
  xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -14,7 +15,7 @@
 <!-- {{{ Exception intro -->
   <section xml:id="exception.intro">
    &reftitle.intro;
-   <para>
+      <para>
     <ooclass><classname>Exception</classname></ooclass> es la clase base para
     todas las excepciones.
    </para>
@@ -36,7 +37,7 @@
     </classsynopsisinfo>
 <!-- }}} -->
  
-   <classsynopsisinfo role="comment">&Properties;</classsynopsisinfo>
+    <classsynopsisinfo role="comment">&Properties;</classsynopsisinfo>
     <fieldsynopsis>
      <modifier>protected</modifier>
      <type>string</type>
@@ -58,14 +59,13 @@
      <varname linkend="exception.props.line">line</varname>
     </fieldsynopsis>
 
-
     <classsynopsisinfo role="comment">&Methods;</classsynopsisinfo>
     <xi:include xpointer="xmlns(db=http://docbook.org/ns/docbook) xpointer(id('class.exception')/db:refentry/db:refsect1[@role='description']/descendant::db:constructorsynopsis[1])" />
     <xi:include xpointer="xmlns(db=http://docbook.org/ns/docbook) xpointer(id('class.exception')/db:refentry/db:refsect1[@role='description']/descendant::db:methodsynopsis[1])" />
    </classsynopsis>
  
 <!-- }}} -->
-   
+ 
   </section>
  
 <!-- {{{ Exception properties -->
@@ -81,13 +81,13 @@
     <varlistentry xml:id="exception.props.code">
      <term><varname>code</varname></term>
      <listitem>
-      <para>The Exception code</para>
+      <para>El código de excepción</para>
      </listitem>
     </varlistentry>
     <varlistentry xml:id="exception.props.file">
      <term><varname>file</varname></term>
      <listitem>
-      <para>The filename where the exception was thrown</para>
+      <para>El nombre del archivo donde se lanzó la excepción</para>
      </listitem>
     </varlistentry>
     <varlistentry xml:id="exception.props.line">
@@ -100,7 +100,7 @@
   </section>
 <!-- }}} -->
  
-</partintro>
+ </partintro>
  
  &language.predefined.exception.construct;
  &language.predefined.exception.getmessage;
