updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@301303 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/float.xml
+++ b/language/types/float.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- $Revision$ -->
+<!-- EN-Revision: f453f7036c74f5f8ce5e15d3d5abbaf8dfd599e2 Maintainer: yago Status: ready -->
 <sect1 xml:id="language.types.float">
  <title>Números de punto flotante</title>
 
  <para>
   Los números de punto flotante (también conocidos como "flotantes",
-  "dobles" o "números reales") pueden ser especificados usando cualquiera de
-  las siguientes sintaxis:
+  "dobles" o "números reales") pueden ser especificados usando cualquiera de las siguientes sintaxis:
  </para>
 
  <informalexample>
@@ -27,7 +26,7 @@ $c = 7E-10;
  </para>
 
  <informalexample>
-  <programlisting role="php">
+  <programlisting>
 <![CDATA[
 LNUM          [0-9]+
 DNUM          ([0-9]*[\.]{LNUM}) | ({LNUM}[\.][0-9]*)
