--- a/language/control-structures/require.xml
+++ b/language/control-structures/require.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: f4e324be031cb8f40fe4bae21582321c91cc9628 Maintainer: jpberdejo Status: ready -->
+<!-- EN-Revision: 4ec895a92c19e6801026a8768c217d7095d1a80c Maintainer: jpberdejo Status: ready -->
 
 <sect1 xml:id="function.require" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink">
  <title><function>require</function></title>
  
  <para>
   <function>require</function> es idéntico a <function>include</function>
-  excepto que en caso de fallo, además producirá un error de nivel <constant>E_ERROR</constant> 
+  excepto que en caso de fallo, además producirá un error de nivel <constant>E_COMPILE_ERROR</constant> 
   fatal. En otras palabras, parará el script mientras que
   <function>include</function> sólo emitirá una advertencia
   (<constant>E_WARNING</constant>) lo cual permite continuar el script.
