Fixed broken build.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@301753 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/types/object.xml
+++ b/language/types/object.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 288721 $ -->
+<!-- $Revision$ -->
 <!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: gerardocdc Status: ready -->
 <sect1 xml:id="language.types.object">
  <title>Objetos</title>
@@ -85,4 +85,3 @@ vim600: syn=xml fen fdm=syntax fdl=2 si
 vim: et tw=78 syn=sgml
 vi: ts=1 sw=1
 -->
-​
