--- a/language/exceptions.xml
+++ b/language/exceptions.xml
@@ -1,54 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Revision: 301447 $ -->
+<!-- $Revision$ -->
 <!-- EN-Revision: f1b4419dc7c9b81611ae6cedb979dc95f7098760 Maintainer: seros Status: ready -->
- <chapter xml:id="language.exceptions" xmlns="http://docbook.org/ns/docbook">
-  <title>Excepciones</title>
-
+<chapter xml:id="language.exceptions" xmlns="http://docbook.org/ns/docbook">
+ <title>Excepciones</title>
+ 
+ <para>
+  PHP 5 tiene un modelo de excepciones similar al de otros lenguajes de programación.
+  Una excepción puede ser lanzada (<literal>throw</literal>n), y atrapada
+  ("<literal>catch</literal>ed") dentro de PHP. El código puede estar dentro de un
+  bloque <literal>try</literal>, para facilitar la captura de excepciones
+  potenciales. Cada bloque <literal>try</literal> debe tener al menos un
+  bloque <literal>catch</literal> correspondiente. Se pueden
+  usar múltiples bloques <literal>catch</literal> para atrapar diferentes clases de
+  excepciones. La ejecución normal (cuando no es lanzada ninguna excepción dentro del
+  bloque <literal>try</literal>, o cuando un bloque <literal>catch</literal> que coincide
+  con la clase de la excepción lanzada no está presente) continuará después del último bloque
+  catch definido en la sencuencia. Las excepciones pueden ser <literal>lanzadas</literal> (o
+  relanzadas) dentro de un bloque <literal>catch</literal>.
+ </para>
+ <para>
+  Cuando una excepción es lanzada, el código siguiente a la declaración no será
+  ejecutado, y PHP intentará encontrar el primer bloque
+  <literal>catch</literal> conicidente. Si una
+  excepción no es capturada, se emitirá un Error Fatal de PHP con un
+  mensaje "<literal>Uncaught Exception ...</literal>" ("Excepción No Capturada"), a menos que se haya
+  definido un gestor con <function>set_exception_handler</function>.
+ </para>
+ <para>
+  El objeto lanzado debe ser una instancia de la clase <classname>Exception</classname>
+  o de una subclase de <classname>Exception</classname>. Intentar lanzar un
+  objeto que no lo es resultará en un Error Fatal de PHP.
+ </para>
+ <note>
   <para>
-   PHP 5 tiene un modelo de excepciones similar al de otros lenguajes de programación.
-   Una excepción puede ser lanzada (<literal>throw</literal>n), y atrapada
-   ("<literal>catch</literal>ed") dentro de PHP. El código puede estar dentro de un
-   bloque <literal>try</literal>, para facilitar la captura de excepciones
-   potenciales. Cada bloque <literal>try</literal> debe tener al menos un
-   bloque <literal>catch</literal> correspondiente. Se pueden
-   usar múltiples bloques <literal>catch</literal> para atrapar diferentes clases de
-   excepciones. La ejecución normal (cuando no es lanzada ninguna excepción dentro del
-   bloque <literal>try</literal>, o cuando un bloque <literal>catch</literal> que coincide
-   con la clase de la excepción lanzada no está presente) continuará después del último bloque
-   catch definido en la sencuencia. Las excepciones pueden ser <literal>lanzadas</literal> (o
-   relanzadas) dentro de un bloque <literal>catch</literal>.
+   Las funciones internas de PHP utilizan principalmente
+   <link linkend="ini.error-reporting">Información de Errores</link>, sólo las extensiones
+   <link linkend="language.oop5">Orientadas a objetos</link>
+   modernas utilizan excepciones. Sin embargo, los errores se pueden traducir a
+   excepciones simplemente con <link linkend="class.errorexception">ErrorException</link>.
   </para>
+ </note>
+ <tip>
   <para>
-   Cuando una excepción es lanzada, el código siguiente a la declaración no será
-   ejecutado, y PHP intentará encontrar el primer bloque
-   <literal>catch</literal> conicidente. Si una
-   excepción no es capturada, se emitirá un Error Fatal de PHP con un
-   mensaje "<literal>Uncaught Exception ...</literal>" ("Excepción No Capturada"), a menos que se haya
-   definido un gestor con <function>set_exception_handler</function>.
+   <link linkend="intro.spl">Standard PHP Library (SPL)</link> - (Biblioteca PHP Estándar) 
+   proporciona un buen número de excepciones incluidas.
   </para>
-  <para>
-   El objeto lanzado debe ser una instancia de la clase <classname>Exception</classname>
-   o de una subclase de <classname>Exception</classname>. Intentar lanzar un
-   objeto que no lo es resultará en un Error Fatal de PHP.
-  </para>
-  <note>
-   <para>
-    Las funciones internas de PHP utilizan principalmente
-    <link linkend="ini.error-reporting">Información de Errores</link>, sólo las extensiones
-    <link linkend="language.oop5">Orientadas a objetos</link>
-    modernas utilizan excepciones. Sin embargo, los errores se pueden traducir a
-    excepciones simplemente con <link linkend="class.errorexception">ErrorException</link>.
-   </para>
-  </note>
-  <tip>
-   <para>
-    <link linkend="intro.spl">Standard PHP Library (SPL)</link> - (Biblioteca PHP Estándar) 
-	proporciona un buen número de excepciones incluidas.
-   </para>
-  </tip>
-   <example>
-    <title>Lanzar una Excepción</title>
-    <programlisting role="php">
+ </tip>
+ <example>
+  <title>Lanzar una Excepción</title>
+  <programlisting role="php">
 <![CDATA[
 <?php
 function inverso($x) {
@@ -69,19 +69,19 @@ try {
 echo 'Hola Mundo';
 ?>
 ]]>
-    </programlisting>
-    &example.outputs;
-    <screen>
+  </programlisting>
+  &example.outputs;
+  <screen>
 <![CDATA[
 0.2
 Excepción capturada: División por cero.
 Hola Mundo
 ]]>
-    </screen>
-   </example>
-   <example>
-    <title>Excepciones Anidadas</title>
-    <programlisting role="php">
+  </screen>
+ </example>
+ <example>
+  <title>Excepciones Anidadas</title>
+  <programlisting role="php">
 <![CDATA[
 <?php
 
@@ -107,25 +107,25 @@ $foo->probar();
 
 ?>
 ]]>
-    </programlisting>
-    &example.outputs;
-    <screen>
+  </programlisting>
+  &example.outputs;
+  <screen>
 <![CDATA[
 string(4) "foo!"
 ]]>
-    </screen>
-   </example>
-   
-  <sect1 xml:id="language.exceptions.extending">
-   <title>Ampliar las Excepciones</title>
-   <para>
-    Una clase de Excepción definida por el usuario puede ser definida ampliando la clase
-    Exception interna. Los miembros y las propiedades de abajo muestran lo que es accesible
-    dentro de la clase hija que deriva de la clase Exception interna.
-   </para>
-   <example>
-    <title>La clase Exception Interna</title>
-    <programlisting role="php">
+  </screen>
+ </example>
+ 
+ <sect1 xml:id="language.exceptions.extending">
+  <title>Ampliar las Excepciones</title>
+  <para>
+   Una clase de Excepción definida por el usuario puede ser definida ampliando la clase
+   Exception interna. Los miembros y las propiedades de abajo muestran lo que es accesible
+   dentro de la clase hija que deriva de la clase Exception interna.
+  </para>
+  <example>
+   <title>La clase Exception Interna</title>
+   <programlisting role="php">
 <![CDATA[
 <?php
 class Exception
@@ -155,27 +155,27 @@ class Exception
 }
 ?>
 ]]>
-    </programlisting>
-   </example>
+   </programlisting>
+  </example>
+  <para>
+   Si una clase extiende la clase Exception interna y redefeine el <link
+   linkend="language.oop5.decon">constructor</link>, se recomienda encarecidamente
+   que también llame a <link
+   linkend="language.oop5.paamayim-nekudotayim">parent::__construct()</link> 
+   para asegurarse que toda la información disponible haya sido asignada apropiadamente. El
+   método <link linkend="language.oop5.magic">__toString()</link> puede ser sobrescrito
+   para proporcionar una salida personalizada cuando el objeto es presentado como una cadena.
+  </para>
+  <note>
    <para>
-    Si una clase extiende la clase Exception interna y redefeine el <link
-    linkend="language.oop5.decon">constructor</link>, se recomienda encarecidamente
-    que también llame a <link
-    linkend="language.oop5.paamayim-nekudotayim">parent::__construct()</link> 
-    para asegurarse que toda la información disponible haya sido asignada apropiadamente. El
-	método <link linkend="language.oop5.magic">__toString()</link> puede ser sobrescrito
-    para proporcionar una salida personalizada cuando el objeto es presentado como una cadena.
-   </para>
-   <note>
-    <para>
-     Las excepciones no se pueden clonar. Intentar <link
-     linkend="language.oop5.cloning">clonar</link> una Excepción resultará en un
-     error <constant>E_ERROR</constant> fatal.
+    Las excepciones no se pueden clonar. Intentar <link
+    linkend="language.oop5.cloning">clonar</link> una Excepción resultará en un
+    error <constant>E_ERROR</constant> fatal.
     </para>
-   </note>
-   <example>
-    <title>Extender la clase Exception (PHP 5.3.0+)</title>
-    <programlisting role="php">
+    </note>
+    <example>
+     <title>Extender la clase Exception (PHP 5.3.0+)</title>
+     <programlisting role="php">
 <![CDATA[
 <?php
 /**
@@ -289,14 +289,14 @@ var_dump($o); // ProbarExcepción
 echo "\n\n";
 ?>
 ]]>
-    </programlisting>
-    <note>
-     <para>
-      Las versiones de PHP 5, anteriores a PHP 5.3.0, no soportan excepciones anidadas.
-      El siguiente fragmento de código se puede usar para reemplazar la clase MiExcepción
-      si se desea ejecutar este ejemplo.
-     </para>
-     <programlisting role="php">
+     </programlisting>
+     <note>
+      <para>
+       Las versiones de PHP 5, anteriores a PHP 5.3.0, no soportan excepciones anidadas.
+       El siguiente fragmento de código se puede usar para reemplazar la clase MiExcepción
+       si se desea ejecutar este ejemplo.
+      </para>
+      <programlisting role="php">
 <![CDATA[
 <?php
 /**
@@ -323,30 +323,30 @@ class MiExcepción extends Exception
 }
 ?>
 ]]>
-     </programlisting>
-    </note>
-   </example>
-  </sect1>
-
- </chapter>
- 
-<!-- Keep this comment at the end of the file
-Local variables:
-mode: sgml
-sgml-omittag:t
-sgml-shorttag:t
-sgml-minimize-attributes:nil
-sgml-always-quote-attributes:t
-sgml-indent-step:1
-sgml-indent-data:t
-indent-tabs-mode:nil
-sgml-parent-document:nil
-sgml-default-dtd-file:"~/.phpdoc/manual.ced"
-sgml-exposed-tags:nil
-sgml-local-catalogs:nil
-sgml-local-ecat-files:nil
-End:
-vim600: syn=xml fen fdm=syntax fdl=2 si
-vim: et tw=78 syn=sgml
-vi: ts=1 sw=1
--->
+      </programlisting>
+     </note>
+    </example>
+    </sect1>
+    
+    </chapter>
+    
+    <!-- Keep this comment at the end of the file
+    Local variables:
+    mode: sgml
+    sgml-omittag:t
+    sgml-shorttag:t
+    sgml-minimize-attributes:nil
+    sgml-always-quote-attributes:t
+    sgml-indent-step:1
+    sgml-indent-data:t
+    indent-tabs-mode:nil
+    sgml-parent-document:nil
+    sgml-default-dtd-file:"~/.phpdoc/manual.ced"
+    sgml-exposed-tags:nil
+    sgml-local-catalogs:nil
+    sgml-local-ecat-files:nil
+    End:
+    vim600: syn=xml fen fdm=syntax fdl=2 si
+    vim: et tw=78 syn=sgml
+    vi: ts=1 sw=1
+    -->
