updated to the most recent version.
git-svn-id: https://svn.php.net/repository/phpdoc/es/trunk@302390 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/predefined/variables/httpresponseheader.xml
+++ b/language/predefined/variables/httpresponseheader.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Revision$ -->
-<!-- EN-Revision: af4410a7e15898c3dbe83d6ea38246745ed9c6fb Maintainer: yago Status: ready -->
+<!-- EN-Revision: 2907db7cac9a253a361e0c873d199f69b06b310e Maintainer: yago Status: ready -->
 
 <phpdoc:varentry xmlns:phpdoc="http://php.net/ns/phpdoc" xml:id="reserved.variables.httpresponseheader" xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" role="noversion">
  <refnamediv>
@@ -15,7 +15,8 @@
    functión <function>get_headers</function>. Cuando se hace uso de
    <link linkend="wrappers.http">HTTP wrapper</link>, 
    <varname>$http_response_header</varname> será poblado con los
-   encabezados de respuesta HTTP.
+   encabezados de respuesta HTTP. <varname>$http_response_header</varname> será creada
+   en el <link linkend="language.variables.scope">ámbito global</link>.
   </para>
  </refsect1>
  
@@ -27,7 +28,11 @@
     <programlisting role="php">
 <![CDATA[
 <?php
-file_get_contents("http://example.com");
+function get_contents() {
+  file_get_contents("http://example.com");
+  var_dump($http_response_header);
+}
+get_contents();
 var_dump($http_response_header);
 ?>
 ]]>
@@ -55,6 +60,7 @@ array(9) {
   [8]=>
   string(38) "Content-Type: text/html; charset=UTF-8"
 }
+NULL
 ]]>
     </screen>
    </example>
